[gd_scene format=3 uid="uid://xcjrjq5cbn7y"]

[ext_resource type="Script" uid="uid://byvoccpe1ihl7" path="res://scenes/Player.gd" id="1_2v3wm"]
[ext_resource type="PackedScene" uid="uid://cf1dcxwv6bvl3" path="res://models/Pistol.glb" id="2_4esil"]
[ext_resource type="Texture2D" uid="uid://vwob30tkwej4" path="res://addons/kenney_particle_pack/star_06.png" id="3_27dhu"]
[ext_resource type="Animation" uid="uid://c2y6nfvxis3xa" path="res://Scripts/Crouch.res" id="4_dqkch"]
[ext_resource type="Script" uid="uid://rfygvim1kdv" path="res://Scripts/State_Machine.gd" id="5_smehm"]
[ext_resource type="Script" uid="uid://dny8c7lgjkirb" path="res://Scripts/Walk_State.gd" id="6_fjrip"]
[ext_resource type="Script" uid="uid://cymjfjcv0cl24" path="res://Scripts/Idle_State.gd" id="6_ur7pv"]
[ext_resource type="Script" uid="uid://wook0hhnfw4q" path="res://Scripts/Jump_State.gd" id="7_y4r1p"]
[ext_resource type="Script" uid="uid://cqh6sf53sq2sy" path="res://Scripts/Debug.gd" id="9_ur7pv"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xk8km"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_67y6s"]
[ext_resource type="PackedScene" uid="uid://laqog3huoq3b" path="res://rope.tscn" id="4_tuyoq"]
[ext_resource type="PackedScene" uid="uid://bucl8rr8ce6je" path="res://models/HumanFallFlat.fbx" id="5_qlg0r"]

[sub_resource type="Animation" id="Animation_jhgv2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.51306, 0)]
}

[sub_resource type="Animation" id="Animation_knepc"]
resource_name = "idle"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.5, -0.284894, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.122103, 0, 0)]
}

[sub_resource type="Animation" id="Animation_qcgne"]
resource_name = "move"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 0.5, 2),
"update": 0,
"values": [Vector3(0.5, -0.25, -0.5), Vector3(0.455732, -0.215424, -0.5), Vector3(0.5, -0.25, -0.5), Vector3(0.55565, -0.198737, -0.5)]
}

[sub_resource type="Animation" id="Animation_efeb8"]
resource_name = "shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera3D/Pistol:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.5, -0.185618, -0.5), Vector3(0.5, -0.25, -0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera3D/Pistol:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector3(0.454152, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6wdk"]
_data = {
&"RESET": SubResource("Animation_jhgv2"),
&"idle": SubResource("Animation_knepc"),
&"move": SubResource("Animation_qcgne"),
&"shoot": SubResource("Animation_efeb8")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_hn37q"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Camera3D:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1

[sub_resource type="Gradient" id="Gradient_cfnn0"]
offsets = PackedFloat32Array(0, 0.141221, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_is51c"]
gradient = SubResource("Gradient_cfnn0")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uu53b"]
angle_min = 45.0
angle_max = 45.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_is51c")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4smqo"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.960784, 0.670588, 1)
albedo_texture = ExtResource("3_27dhu")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="PlaneMesh" id="PlaneMesh_b2g4i"]
material = SubResource("StandardMaterial3D_4smqo")
size = Vector2(0.5, 0.5)
orientation = 2

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qlg0r"]
_data = {
&"Crouch": ExtResource("4_dqkch")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_dqkch"]

[node name="Player" type="CharacterBody3D" unique_id=820130408 node_paths=PackedStringArray("crouch_anim_player", "crouch_shapecast") groups=["Player"]]
collision_layer = 2
script = ExtResource("1_2v3wm")
crouch_anim_player = NodePath("CrouchAnimationPlayer")
crouch_shapecast = NodePath("ShapeCast3D")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=1832600017]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_xk8km")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=2073760843 groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_67y6s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1889766177]
libraries/ = SubResource("AnimationLibrary_p6wdk")
autoplay = &"idle"
playback_default_blend_time = 0.05

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="." unique_id=374552710]
replication_config = SubResource("SceneReplicationConfig_hn37q")

[node name="Camera3D" type="Camera3D" parent="." unique_id=1853814499]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.51306, 0)

[node name="Pistol" parent="Camera3D" unique_id=945160158 instance=ExtResource("2_4esil")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, -0.25, -0.5)

[node name="MuzzleFlash" type="GPUParticles3D" parent="Camera3D/Pistol" unique_id=215553547]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0588368, -0.313209)
emitting = false
amount = 1
lifetime = 0.25
one_shot = true
local_coords = true
process_material = SubResource("ParticleProcessMaterial_uu53b")
draw_pass_1 = SubResource("PlaneMesh_b2g4i")

[node name="RayCast3D" type="RayCast3D" parent="Camera3D" unique_id=1804038237]
target_position = Vector3(0, 0, -50)
collision_mask = 2

[node name="CrouchAnimationPlayer" type="AnimationPlayer" parent="." unique_id=320549004]
libraries/ = SubResource("AnimationLibrary_qlg0r")

[node name="ShapeCast3D" type="ShapeCast3D" parent="." unique_id=1797677701]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.7571673, 0)
shape = SubResource("SphereShape3D_dqkch")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 0.57254905, 0, 1)

[node name="HumanFallFlat" parent="." unique_id=601839824]
[node name="State_Machine" type="Node" parent="." unique_id=1801626904 node_paths=PackedStringArray("CURRENT_STATE")]
script = ExtResource("5_smehm")
CURRENT_STATE = NodePath("Idle_State")

[node name="Walk_State" type="Node" parent="State_Machine" unique_id=470991308]
script = ExtResource("6_fjrip")

[node name="Jump_State" type="Node" parent="State_Machine" unique_id=1881756683]
script = ExtResource("7_y4r1p")

[node name="Idle_State" type="Node" parent="State_Machine" unique_id=379527414]
script = ExtResource("6_ur7pv")

[node name="Debug" type="Control" parent="." unique_id=2077644916]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_ur7pv")

[node name="DebugPanel" type="PanelContainer" parent="Debug" unique_id=1516872476]
layout_mode = 0
offset_right = 271.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/DebugPanel" unique_id=362493263]
layout_mode = 2

[node name="Label" type="Label" parent="Debug" unique_id=1482578808]
layout_mode = 0
offset_top = 39.0
offset_right = 40.0
offset_bottom = 62.0
[node name="GrappleController" type="Node" parent="." unique_id=364533085 node_paths=PackedStringArray("ray", "rope")]
[node name="HumanFallFlat" parent="." unique_id=601839824 instance=ExtResource("5_qlg0r")]
transform = Transform3D(-3.059797e-08, 0, 0.7, 0, 0.7, 0, -0.7, 0, -3.059797e-08, 0, 1.1904991, 0)

[node name="HumanFallFlat" parent="HumanFallFlat" unique_id=40740699 instance=ExtResource("5_qlg0r")]
transform = Transform3D(0.0014661108, 0, 0.9999989, 0, 1, 0, -0.9999989, 0, 0.0014661108, 0, 1.1928062, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1621161732]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2278812, 0.86798215, 0)
shape = SubResource("CapsuleShape3D_qlg0r")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="." unique_id=1397114300]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.19414401, 0.2868042, 0)
shape = SubResource("CapsuleShape3D_tuyoq")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="." unique_id=1955338220]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.23663259, 0.31359863, 0)
shape = SubResource("CapsuleShape3D_fjrip")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="." unique_id=1913115679]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -0.0056962967, 1.1708058, 0.066233635)
shape = SubResource("CapsuleShape3D_smehm")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="." unique_id=1227652685]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.6285291, -0.062607765)
shape = SubResource("CapsuleShape3D_ur7pv")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="CrouchAnimationPlayer" to="." method="_on_crouch_animation_finished"]
[connection signal="animation_started" from="CrouchAnimationPlayer" to="." method="_on_crouch_animation_started"]
